--- a/mercado_livre/scrapy.cfg
+++ b/mercado_livre/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = amazon_scrapy.settings
+default = mercado_livre.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = amazon_scrapy
+project = mercado_livre
