--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Scrapy = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pylint = "^2.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
